--- a/game.css
+++ b/game.css
@@ -77,6 +77,13 @@ body{
 
 
 @media screen and (max-width: 464px){
+   .title{
+      color: #ddd;
+      border: 2px solid #3a3a3a;
+      font-size: 1rem;
+      text-align: center;
+      padding: 20px;
+   }
 	.grid-container{
       width: 300px;
       height: 450px;
